# advent-of-coolio-2022

./: README.md
day_1/: default.nix  main.bqn
day_10/: default.nix  main.exs
day_11/: default.nix  main.rkt
day_12/: default.nix  main.ml  package.json
day_13/: default.nix  main.jq
day_14/: CHANGELOG.md  LICENSE  aocday14.cabal  default.nix
day_14/app/: Main.hs
day_15/: default.nix  main.kk  utils.kk
day_16/: .gitignore  default.nix  main.u
day_18/: default.nix  main.nim
day_2/: default.nix  main.pl
day_20/: .gitignore  main.ch
day_21/: Program.fs  default.nix
day_23/: .gitignore  build.sbt  default.nix  input.txt
day_23/src/main/scala/example/: Main.scala
day_23/src/test/scala/example/: HelloSpec.scala
day_25/: main.bqn
day_3/: .gitignore  Cargo.toml  default.nix  esbuild.js  package.json
day_3/elm/: Main.elm
day_3/js/: index.js
day_3/rust/: lib.rs
day_4/: README.md  input.ts  input.txt  main.ts  package.json
day_5/: default.nix  input-example.ts  input.ts  main.cr  main.ts
day_6/: input.ts  main.ts  regex.js
day_7/: CHANGELOG.md  Makefile  aocday7.cabal  default.nix
day_7/app/: Main.hs
day_7/docker/: Dockerfile  docker-compose.yml
day_7/docker/src/: script.sh
day_7/src/: MyLib.hs
day_8/: default.nix  gleam.toml  manifest.toml
day_8/src/: aoc_d8.gleam
day_9/: Cargo.toml  default.nix
day_9/src/: main.rs
