cabal-version:      3.0
name:               aocday7
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Akshay Nair
maintainer:         phenax5@gmail.com
-- copyright:
category:           Shitcode
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aocday7
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010
